--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@ body{
 
 .search-box button{
     cursor: pointer;
-    width: 50px;
+    width: 60px;
     height: 50px;
     color: #062830;
-    background: #dff6ff;
+    
     border-radius: 50%;
     font-size: 22px;
     transition: 0.4 ease;
@@ -195,7 +195,8 @@ body{
     
     .container{
         width: 75%;
-        height: 105px;
+        height: 70px;
+        padding: 10px 32px;
            
     }
 
@@ -203,8 +204,33 @@ body{
         width: 100%;
         height: min-content;
         display: flex;
-        align-items: center;
+        align-items:center;
         justify-content: space-between;
+        margin-bottom: 30px;
+    
+    }
+
+    .search-box input{
+        color: #062830;
+        width: 100%;
+        font-size: 15px;
+        font-weight: 500;
+     
+    }
+
+    .search-box button{
+        cursor: pointer;
+        width: 70px;
+        height: 50px;
+        color: #062830;
+        margin-left: 5px;
+        border-radius: 60%;
+        font-size: 18px;
+        transition: 0.4 ease;
+    }
+
+    .search-box input::placeholder{
+        font-size: 15px;
     
     }
 
